fixes rooms sidebar overflowing into header

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -405,7 +405,7 @@
     width: 300px;
     height: 100%;
     margin-right: -250px;
-    overflow-y: auto;
+    overflow-y: hidden;
     background: #000;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -414,6 +414,7 @@
     margin-top: -50px;
     padding-right: 10px;
     padding-left: 10px;
+    top: 55px;
 }
 
 #wrapper.toggled #benedict-sidebar-wrapper {
